# okami

./: .gitignore  CMakeLists.txt  Makefile  README.md  bootloader.s
kernel/: CMakeLists.txt  boot-new.s  boot.s  kernel.c  kernel.mk  linker.ld
meta/scripts/: qemu-riscv64.mk  riscv64.ld
meta/toolchains/: gcc.mk
src/kernel/: Makefile  kernel.c  kernel.mk  kmalloc.c  kmalloc.h  kstdio.h  kstring.c  kstring.h  linker.ld  multiboot.h  pmm.c  pmm.h  string.c  string.h  util.c  util.h
src/kernel/riscv64/: boot.s  main.c
src/kernel/x86/: asm.c  asm.h  boot.s  exceptions.c  exceptions.h  gdt.c  gdt.h  idt.c  idt.h  interrupts.c  interrupts.h  interrupts.s  isr.s  kmain.c  kprintf.c  linker.ld  pic.c  pic.h  pit.c  pit.h  timer.c  timer.h  vga.c  vga.h
src/kernel/x86/loader/: linker.ld  stage1.s  stage2.s
src/loader/x86/: Makefile
src/loader/x86/stage1/: linker.ld  stage1.s
src/loader/x86/stage2/: linker.ld  stage2.s
toolchains/: x86.cmake
